[package]
name = "mredis"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
#tokio = {version = "1", features = ["full"]}
tracing = "0.1"
rustc-hash = "1"

[dev-dependencies]
criterion = "0.5.1"
dashmap = "5.5.3"
rayon = "1.9.0"
csv = "1.3.0"
futures = "0.3.30"

[[bench]]
name = "bench_db"
harness = false

[profile.bench]
debug = false