[package]
name = "mredis"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0"
rustc-hash = "1"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
dashmap = "5"
rayon = "1"
csv = "1"
futures = "0"

[[bench]]
name = "bench_db"
harness = false

[profile.bench]
debug = false
